configured phone auth page

--- a/public/phone.html
+++ b/public/phone.html
@@ -7,7 +7,7 @@
   <!--MATERIAL ICONS-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
   rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="login.css">
+  <link rel="stylesheet" type="text/css" href="phone.css">
 </head>
 
 <body>
