--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!--MATERIAL ICONS-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
   rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="login.css">
+  <link rel="stylesheet" type="text/css" href="phone.css">
 </head>
 
 <body>
@@ -59,9 +59,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Password">
       </div>
-
       <button id="myButton" class="btn" type="button">Join Us</button>
-
     </form>
 
 <script type="module">
@@ -100,9 +98,9 @@ document.getElementById("myButton").addEventListener('click', function(e) {
     const userData = snapshot.val();
     if (userData && userData.password === password) {
       // Login successful
-    //   alert("Login Successful!");
+      // alert("Login Successful!");
       // Redirect to login.html
-      window.location.href = 'index2.html';
+      window.location.href = 'phone.html';
     } else {
       alert("Invalid username or password");
     }
