--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <!--MATERIAL ICONS-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
-  rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" type="text/css" href="phone.css">
 </head>
 
