--- a/public/phone.html
+++ b/public/phone.html
@@ -59,7 +59,7 @@
       <input type="phone" id="phone" placeholder="+254...">
       <div id="recaptcha-container"></div>
     
-      <button type="button" class="btn" onclick="phoneAuth();">SendCode</button>
+      <button id="myButton2" type="button" class="btn" onclick="phoneAuth();">Send Code</button>
     </div>
 
     <input type="text" id="verificationCode" placeholder="Enter verification code">
