Added favicon to every page

--- a/public/phone.html
+++ b/public/phone.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
   rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="phone.css">
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
 </head>
 
 <body>
