--- a/public/chat.html
+++ b/public/chat.html
@@ -18,6 +18,7 @@
     <link href="stylesheets/home.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>HealthDoc | Symptom analysis AI</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
 </head>
 <body>
     <nav class="hero-nav container mx-auto">
