--- a/public/features.html
+++ b/public/features.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="./stylesheets/features.css">
   <link rel="stylesheet" href="./stylesheets/root.css">
   <link rel="stylesheet" href="./stylesheets/home.css">
-
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
   <title>HealthDoc | Symptom analysis AI</title>
 </head>
 
