--- a/public/chat.html
+++ b/public/chat.html
@@ -24,14 +24,14 @@
     <nav class="hero-nav container mx-auto">
         <ul class="nav w-100 list-unstyled align-items-center p-0">
           <li class="hero-nav__item">
-              <a href="#" class="hero-nav__link">HealthDoc</a>
+              <a href="/Home.html" class="hero-nav__link">HealthDoc</a>
           </li>
           <li id="hero-menu" class="flex-grow-1 hero__nav-list hero__nav-list--mobile-menu ft-menu">
             <ul class="hero__menu-content nav flex-column flex-lg-row ft-menu__slider animated list-unstyled p-2 p-lg-0">
               <li class="flex-grow-1">
                 <ul class="nav nav--lg-side flex-column-reverse flex-lg-row-reverse list-unstyled align-items-center p-0">
                   <li class="hero-nav__item">
-                    <a href="/index.html" class="btn btn-primary">
+                    <a href="/Home.html" class="btn btn-primary">
                       Cancel Chat!
                     </a>
                   </li>
