--- a/public/phone.html
+++ b/public/phone.html
@@ -104,7 +104,7 @@
       <div class="feature">
         <i class="fas fa-code"><span class="material-icons-sharp">policy</span></i>
         <h2>HealthDoc</h2>
-        <p>A modern and clean design system for developing fast and powerful web interfaces.</p>
+        <p>HealthDoc uses LUIS, Azure and Microsoft AI to give you symptom analysis faster and conveniently.</p>
       </div>
       <div class="feature">
         <i class="fas fa-gift"><span class="material-icons-sharp">check_circle_outline</span></i>
