--- a/public/index.html
+++ b/public/index.html
@@ -76,17 +76,17 @@
                // Import the functions you need from the SDKs you need
                import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
                import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js";
-                import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-database.js";
+               import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-database.js";
   
-    const firebaseConfig = {
-        apiKey: "AIzaSyCr4ePLTqkp48I3NvbkBkB8vdjhYj-D5xE",
-        authDomain: "healthdoc-13ad2.firebaseapp.com",
-        projectId: "healthdoc-13ad2",
-        databaseURL:"https://healthdoc-13ad2-default-rtdb.firebaseio.com",
-        storageBucket: "healthdoc-13ad2.appspot.com",
-        messagingSenderId: "494101344976",
-        appId: "1:494101344976:web:c625e8b2091e2b04e264d5",
-        measurementId: "G-94QSMQ7SYN"
+      const firebaseConfig = {
+              apiKey: "AIzaSyDmJpKmYX9lZO_m4CbT9WuNXvM07d6MJS0",
+              authDomain: "healthdoc-edd66.firebaseapp.com",
+              databaseURL: "https://healthdoc-edd66-default-rtdb.firebaseio.com",
+              projectId: "healthdoc-edd66",
+              storageBucket: "healthdoc-edd66.appspot.com",
+              messagingSenderId: "210644864503",
+              appId: "1:210644864503:web:82a22a5a92a4402e2572f2",
+              measurementId: "G-2N8SSJQDJG"
 };
 
 
@@ -146,7 +146,7 @@ createUserWithEmailAndPassword(auth, email, password)
       <div class="feature">
         <i class="fas fa-code"><span class="material-icons-sharp">policy</span></i>
         <h2>HealthDoc</h2>
-        <p>A modern and clean design system for developing fast and powerful web interfaces.</p>
+        <p>HealthDoc uses LUIS, Azure and Microsoft AI to give you symptom analysis faster and conveniently.</p>
       </div>
       <div class="feature">
         <i class="fas fa-gift"><span class="material-icons-sharp">check_circle_outline</span></i>
