--- a/public/login.html
+++ b/public/login.html
@@ -78,14 +78,14 @@
             import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js";
   
     const firebaseConfig = {
-        apiKey: "AIzaSyCr4ePLTqkp48I3NvbkBkB8vdjhYj-D5xE",
-        authDomain: "healthdoc-13ad2.firebaseapp.com",
-        projectId: "healthdoc-13ad2",
-        databaseURL:"https://healthdoc-13ad2-default-rtdb.firebaseio.com",
-        storageBucket: "healthdoc-13ad2.appspot.com",
-        messagingSenderId: "494101344976",
-        appId: "1:494101344976:web:c625e8b2091e2b04e264d5",
-        measurementId: "G-94QSMQ7SYN"
+              apiKey: "AIzaSyDmJpKmYX9lZO_m4CbT9WuNXvM07d6MJS0",
+              authDomain: "healthdoc-edd66.firebaseapp.com",
+              databaseURL: "https://healthdoc-edd66-default-rtdb.firebaseio.com",
+              projectId: "healthdoc-edd66",
+              storageBucket: "healthdoc-edd66.appspot.com",
+              messagingSenderId: "210644864503",
+              appId: "1:210644864503:web:82a22a5a92a4402e2572f2",
+              measurementId: "G-2N8SSJQDJG"
 };
 
 
@@ -111,12 +111,27 @@ signInWithEmailAndPassword(auth, email, password)
     window.location.href = 'phone.html'; // Redirect to the desired page
   })
   .catch((error) => {
-    // Handle authentication errors
+    // Handle authentication errors 
     const errorCode = error.code;
     const errorMessage = error.message;
-    console.error("Error authenticating user:", errorCode, errorMessage);
-    alert("Invalid email or password. Please try again.");
+
+    // Provide specific feedback based on the error code
+    switch (errorCode) {
+      case 'auth/user-not-found':
+        alert("User not found. Please check your email and try again.");
+        break;
+      case 'auth/wrong-password':
+        alert("Invalid password. Please try again.");
+        break;
+      case 'auth/invalid-email':
+        alert("Invalid email format. Please enter a valid email address.");
+        break;
+      default:
+        console.error("Error authenticating user:", errorCode, errorMessage);
+        alert("An error occurred. Please try again later.");
+    }
   });
+
 
 });
 
@@ -126,7 +141,7 @@ signInWithEmailAndPassword(auth, email, password)
       <div class="feature">
         <i class="fas fa-code"><span class="material-icons-sharp">policy</span></i>
         <h2>HealthDoc</h2>
-        <p>A modern and clean design system for developing fast and powerful web interfaces.</p>
+        <p>HealthDoc uses LUIS, Azure and Microsoft AI to give you symptom analysis faster and conveniently.</p>
       </div>
       <div class="feature">
         <i class="fas fa-gift"><span class="material-icons-sharp">check_circle_outline</span></i>
