--- a/public/phone.html
+++ b/public/phone.html
@@ -84,14 +84,14 @@
       // };
 
       var firebaseConfig = {
-        apiKey: "AIzaSyCr4ePLTqkp48I3NvbkBkB8vdjhYj-D5xE",
-        authDomain: "healthdoc-13ad2.firebaseapp.com",
-        projectId: "healthdoc-13ad2",
-        databaseURL:"https://healthdoc-13ad2-default-rtdb.firebaseio.com",
-        storageBucket: "healthdoc-13ad2.appspot.com",
-        messagingSenderId: "494101344976",
-        appId: "1:494101344976:web:c625e8b2091e2b04e264d5",
-        measurementId: "G-94QSMQ7SYN"
+              apiKey: "AIzaSyDmJpKmYX9lZO_m4CbT9WuNXvM07d6MJS0",
+              authDomain: "healthdoc-edd66.firebaseapp.com",
+              databaseURL: "https://healthdoc-edd66-default-rtdb.firebaseio.com",
+              projectId: "healthdoc-edd66",
+              storageBucket: "healthdoc-edd66.appspot.com",
+              messagingSenderId: "210644864503",
+              appId: "1:210644864503:web:82a22a5a92a4402e2572f2",
+              measurementId: "G-2N8SSJQDJG"
       };
       
       
