Minor adjustments and updates

--- a/public/index.html
+++ b/public/index.html
@@ -159,9 +159,14 @@ createUserWithEmailAndPassword(auth, email, password)
       </ul></p>
       </div>
       <div class="feature">
-        <i class="fas fa-edit"></i>
-        <h3>Updates</h3>
-        <p>A modern and clean design system for developing fast and powerful web interfaces.</p>
+        <i class="fas fa-edit"><span class="material-icons-sharp">support_agent</span></i>
+        <h2>Support</h2>
+        <p><ul>
+          <li>Contact rep:0742742775</li>
+          <li>Bot issue: iamstuck@doctalk.com</li>
+          <li>Query: Query@doctalk.com</li>
+      </ul>
+        </p>
       </div>
     </div>
 
