--- a/public/features.html
+++ b/public/features.html
@@ -192,7 +192,7 @@
             </li>
           </ul>
           <div class="mt-5">
-            <a href="./index.html" class="btn btn-primary">Got It !</a>
+            <a href="./Home.html" class="btn btn-primary">Got It !</a>
           </div>
         </div>
       </div>
